--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
+    "react-scroll-to-bottom": "^4.2.0",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
